--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -111,6 +111,16 @@
 
             <div class="col-sm-3">
               <div class="form-group">
+                {{counsellor.occupation}} {% comment %}
+                <input type="text" class="form-control" required />
+                {% endcomment %}
+
+                <label for="usr">Occupation</label>
+              </div>
+            </div>
+
+            <div class="col-sm-3">
+              <div class="form-group">
                 {% comment %}
                 <input type="text" class="form-control" required />
                 {% endcomment %} {{counsellor.contact}}
