--- a/counsellingApp/templates/app/login.html
+++ b/counsellingApp/templates/app/login.html
@@ -301,6 +301,7 @@ select:placeholder {
     <div class="fadeIn first">
       <img src="{% static "media/University.png" %}"  id="icon" alt="UG_logo" />
     </div>
+    <div class="fadein">
 <div classs="container p-5">
 	<div class="row no-gutters">
 		<div class="col-lg-10 col-md-12 m-auto">
@@ -311,6 +312,7 @@ select:placeholder {
       {{ message }}
       </div>
     {% endfor %}
+</div>
 </div>
 		</div>
 	</div>
