--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -27,6 +27,23 @@
           <div class="row">
             <div class="col-sm-3">
               <div class="form-group">
+                {% for object in objects%}
+                <input
+                  type="text"
+                  class="form-control"
+                  value="{{object.user_id}}"
+                />
+                <!---->
+                {% endfor %} {% comment %}
+                <input type="text" class="form-control" required />
+                {% endcomment %}
+
+                <label for="usr">ID</label>
+              </div>
+            </div>
+
+            <div class="col-sm-3">
+              <div class="form-group">
                 {{counsellor.profile}} {% comment %}
                 <input type="text" class="form-control" required />
                 {% endcomment %}
