--- a/counsellingApp/templates/app/dashboard.html
+++ b/counsellingApp/templates/app/dashboard.html
@@ -27,14 +27,7 @@
           <div class="row">
             <div class="col-sm-3">
               <div class="form-group">
-                {% for object in objects%}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.user_id}}"
-                />
-                <!---->
-                {% endfor %} {% comment %}
+                {% comment %}
                 <input type="text" class="form-control" required />
                 {% endcomment %}
 
