--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -525,6 +525,11 @@ section {
 
 }
 
+#objects{
+    font-size: 16px;
+   
+}
+
 #sort1 {
     float: left;
     width: 76.5%;
@@ -1326,15 +1331,16 @@ body {
 
 #toprightcontent6 {
     height: 10%;
-    width: 88%;
+    width: 90%;
     float: left;
     align-items: center;
     display: flex;
 }
 
 #topleftcontent6 {
+   
     height: 10%;
-    width: 12%;
+    width: 10%;
     float: left;
 }
 
@@ -1385,7 +1391,8 @@ body {
 }
 
 #profiletext {
-    padding-top: 13%;
+    padding-top: 15%;
+    font-size:20px;
 }
 
 #subleftcontent6 {
