--- a/counsellingApp/templates/app/settings.html
+++ b/counsellingApp/templates/app/settings.html
@@ -51,6 +51,7 @@
                       class="btn btn-sm btn-outline-success edit_employee"
                       type="button"
                     >
+                    {% comment %} <a href = "/url in urls.py//{{object.user_id}}"/> {% endcomment %}
                       <i class="fas fa-check"></i>
                     </button>
 
