--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -12,7 +12,7 @@
     <div id="topleftcontent6">
       {% for object in objects%}<!---->
       {% if object.user_id == pk|add:0 %}
-      <img src="{{ object.profile }}" id="profilepic6" alt="profile" />
+      <img src="{{ object.profile.url }}" id="profilepic6" alt="profile" />
 
       <div class="dropdown">
         <p class="dropbtn" id="profiletext">
