--- a/counsellingApp/templates/app/admin.html
+++ b/counsellingApp/templates/app/admin.html
@@ -12,10 +12,15 @@
     <div id="topleftcontent6">
       {% for object in objects%}<!---->
       {% if object.user_id == pk|add:0 %}
-      <img src="{{ object.profile.url }}" id="profilepic6" alt="profile" />
+      <img
+        src="{{ object.profile.url }}"
+        class="img-thumbnail"
+        id="profilepic6"
+        alt="profile"
+      />
 
-      <div class="dropdown">
-        <p class="dropbtn" id="profiletext">
+      <div class="dropdown" id="profiletext">
+        <p class="dropbtn" style="font-size: 20px">
           {{object.user_id}}
 
           <i class="fas fa-caret-down"></i>
