--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -382,10 +382,9 @@ section {
 }
 
 #logo3 {
-    width: 20%;
-    height: 5%;
+    width: 90%;
+    height: 40%;
 
-    border-radius: 100px;
 
 }
 
@@ -512,7 +511,7 @@ section {
 
 #top1 {
     float: left;
-    width: 85%;
+    width: 65%;
 
 
 }
@@ -520,7 +519,7 @@ section {
 #top2 {
 
     float: left;
-    width: 15%;
+    width: 30%;
 
 
 }
@@ -531,10 +530,11 @@ section {
 }
 
 #objectsprofile{
-    width: 10%;
-    height: 20%;
-    float:left;
-    border-radius:100px;
+  float:left;
+  width: 200px;
+  height: 150px;
+ 
+}
    
 }
 
@@ -682,7 +682,8 @@ section {
 }
 
 #mysearch {
-    width: 30%;
+    width: 100%;
+   
 
 
 }
@@ -731,9 +732,10 @@ section {
 }
 
 #button1rep {
-
+ width: 50%;
+ float: left;
     padding-right: 4%;
-    padding-top: 2%;
+    padding-top: 1%;
     overflow: hidden;
 
 }
@@ -1339,7 +1341,7 @@ body {
 
 #toprightcontent6 {
     height: 10%;
-    width: 90%;
+    width: 85%;
     float: left;
     align-items: center;
     display: flex;
@@ -1348,7 +1350,7 @@ body {
 #topleftcontent6 {
    
     height: 10%;
-    width: 10%;
+    width: 15%;
     float: left;
 }
 
@@ -1391,16 +1393,17 @@ body {
 }
 
 #profilepic6 {
-    border-radius: 100px;
-    width: 35%;
-    height: 80%;
+    width: 25%;
+    height: 70%;
     float: left;
-    padding: 2%;
+   
+   
 }
 
 #profiletext {
-    padding-top: 15%;
-    font-size:20px;
+    padding-top: 2%;
+    padding-left: 5%;
+   
 }
 
 #subleftcontent6 {
