--- a/counsellingApp/templates/app/profile.html
+++ b/counsellingApp/templates/app/profile.html
@@ -43,10 +43,11 @@
          </center><br/>
               <h1 id="myh1">Our Therapist</h1>
               <hr>
-  <div style=" width:50%;float: left;  ">
+              <center>
+  <div style=" width:25%;float: left;  ">
   <div id="mysort"style="float:left;">
-  <label id="labelSort"><div class="dropdown" >         
-  <p  style= "color:white;width:50px;margin: 0%" >Sort</p>
+  <label id="labelSort"><div class="dropdown" > 
+  <p  style= "color:white;margin: 0%" >Sort</p>
   <div class="dropdown-content">
   <a href="#"></a>
 <a href="#"> </a>
@@ -57,11 +58,11 @@
 
      </div>
      <div id="button1rep">
-  <a href="#" style="opacity:0.7;font-size:13px;padding-bottom:0%;"> Need more help?</a>
+  <a href="#" style="opacity:0.7;font-size:13px;padding-right:20%;"> Need more help?</a>
  <button type="submit" id="button1" href="#"> Guided Matching</button>
   </div>
   </div>      
-   
+</center>
    
        
 
