--- a/counsellingApp/templates/app/assets/main.css
+++ b/counsellingApp/templates/app/assets/main.css
@@ -97,6 +97,7 @@ section {
 /* width */
 ::-webkit-scrollbar {
     width: 2px;
+    height: 2px;
 
 }
 
@@ -612,7 +613,21 @@ section {
 #profile {
     border-radius: 100px;
     width: 50%;
-    border: 2px solid cyan;
+    
+    box-shadow:
+        0px 0px 10px rgb(190, 185, 185);
+
+
+    height: 35%;
+    float: center;
+}
+
+
+
+#profilenot {
+    border-radius: 100px;
+    width: 50%;
+    
     box-shadow:
         0px 0px 10px rgb(190, 185, 185);
 
@@ -620,6 +635,7 @@ section {
     height: 22%;
     float: center;
 }
+
 
 #sub1 {
     padding: 5%;
@@ -718,7 +734,7 @@ section {
 }
 
 #mypadtop {
-    height: 77%;
+    height: 50%;
 margin-bottom:2%;
     padding-left: 1%;
     padding-right: 1%;
