--- a/counsellingApp/templates/app/index.html
+++ b/counsellingApp/templates/app/index.html
@@ -48,12 +48,13 @@
         <div class="panel-heading">{{object.title}} {{object.firstName}} {{object.lastName}}</div>
         <div class="panel-body"><img src="{{object.profile.url }}" 
           class="img-responsive" style="width:30%" alt="Image"></div>
-        <div class="panel-footer" style="background-color:white;"> {{object.about}}</div>
+        <div class="panel-footer" style="background-color:white;height: 30%;overflow-x:scroll"> {{object.about}}</div>
      <center><a href="#popup_screen" id = "home_img"
 type="button" class="btn btn-info" 
       >View More</a>
       </div>
-      
+      <br>
+      <br>
     </div>
     <div id="popup_screen">
   <a href="#" class="cancel"><i class="far fa-times-circle"></i></a>
@@ -63,7 +64,7 @@ type="button" class="btn btn-info"
    
     <div id="subtab1">
          <center> 
-           <img id="profile"  class="a" src="{{object.profile.url }}">
+           <img id="profilenot"  class="a" src="{{object.profile.url }}">
 
         </center>
         <center>
@@ -85,9 +86,9 @@ type="button" class="btn btn-info"
         <p style="color: white;">
          {{object.occupation}}
         </p>
-      <p style="padding-top:2%;color: white;">
+      <div style="padding-top:2%;color: white;height:20%;overflow-x:scroll">
         {{object.about}}
-        <p>
+        </div>
 <div style="height:20%;">
   <p id="myh2" style="color: white;"> Therapies Offered</p>
   <div style="width:100%;">
